<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="core_ok">OK</string>
    <string name="core_cancel">Cancel</string>
    <string name="core_preference_press_key">Press a hardware key</string>
    <string name="core_preference_none">&lt;none&gt;</string>
    <string name="core_preference_clear">Clear</string>
    <string name="core_send_email_using">Send email using…</string>
    <string name="consent_title">Please choose privacy options (you can always change them later in the settings)</string>
    <string name="consent_back">← Exit</string>
    <string name="consent_next">Let’s go! →</string>
    <string name="prepare_textures">Preparing textures</string>
    <string name="menu_btn_achievements">ACHIEVEMENTS</string>
    <string name="menu_btn_play">PLAY</string>
    <string name="menu_btn_options">OPTIONS</string>
    <string name="menu_btn_like_vk" translatable="false">VK</string>
    <string name="menu_btn_like_facebook" translatable="false">Facebook</string>
    <string name="menu_btn_like_telegram" translatable="false">Telegram</string>
    <string name="menu_quit_warn_yes">Yes</string>
    <string name="menu_quit_warn_no">No</string>
    <string name="menu_share_title">Share</string>
    <string name="game_se_back">← Back</string>
    <string name="game_se_continue">Continue →</string>
    <string name="game_se_info">Enemies: %1$d / Secrets: %2$d / Time: %3$s\nFailures: %4$d / Resurrects: %5$d</string>
    <string name="game_pt_tutorial">Training area</string>
    <string name="game_pt_episode_1">Episode I</string>
    <string name="game_pt_episode_2">Episode II</string>
    <string name="game_pt_episode_3">Episode III</string>
    <string name="game_quit_warn">There are more enemies to kill.\nAre you sure to quit?</string>
    <string name="game_enter_code">Enter code</string>
    <string name="game_menu_title_noweapon">Menu</string>
    <string name="game_menu_title_weapon">Change weapon</string>
    <string name="game_menu_close">× Close</string>
    <string name="game_menu_exit">⇪ Exit to menu</string>
    <string name="game_menu_code">Game code</string>
    <string name="options_restart_warn">Current game, all progress and all achievements will be lost!\n\nAre you sure?</string>
    <string name="options_consent_for_ads_changed">The consent to personalize your advertising experience has been changed, and the application must be restarted.\n\nPress OK to restart application.</string>
    <string name="options_select_language">Select language</string>
    <string name="options_select_controls">Select control scheme</string>
    <string name="options_general">General</string>
    <string name="options_language">Language</string>
    <string name="options_language_system">System default</string>
    <string name="options_help">Help</string>
    <string name="options_about">About and licenses</string>
    <string name="options_restart">Restart game from the very beginning</string>
    <string name="options_debug_crash" translatable="false">DEBUG: force crash</string>
    <string name="options_controls">Controls</string>
    <string name="options_controls_scheme">Control scheme</string>
    <string name="options_controls_settings">Controls settings</string>
    <string name="options_controls_alpha">Controls opacity</string>
    <string name="options_accelerometer_enabled">Enable accelerometer</string>
    <string name="options_accelerometer_acceleration">Accelerometer acceleration</string>
    <string name="options_trackball_acceleration">Trackball acceleration</string>
    <string name="options_invert_vertical_look">Invert vertical look</string>
    <string name="options_invert_horizontal_look">Invert horizontal look</string>
    <string name="options_left_hand_aim">Left hand aim</string>
    <string name="options_fire_button_at_top">Fire button at top</string>
    <string name="options_move_speed">Move speed</string>
    <string name="options_strafe_speed">Strafe speed</string>
    <string name="options_rotate_speed">Rotate speed</string>
    <string name="options_key_mappings">Key mappings</string>
    <string name="options_screen">Screen</string>
    <string name="options_analytics">Analytics and ADs</string>
    <string name="options_gamma">Gamma</string>
    <string name="options_sound">Sound</string>
    <string name="options_enable_sound">Enable sound</string>
    <string name="options_music_volume">Music volume</string>
    <string name="options_effects_volume">Effects volume</string>
    <string name="options_key_forward">Forward</string>
    <string name="options_key_backward">Backward</string>
    <string name="options_key_strafe_left">Strafe left</string>
    <string name="options_key_strafe_right">Strafe right</string>
    <string name="options_key_rotate_left">Rotate left</string>
    <string name="options_key_rotate_right">Rotate right</string>
    <string name="options_key_fire">Fire</string>
    <string name="options_key_next_weapon">Next weapon</string>
    <string name="options_key_strafe_mode">Enable strafe mode</string>
    <string name="options_show_crosshair">Show crosshair</string>
    <string name="options_rotate_screen">Rotate in-game screen</string>
    <string name="options_consent_crashes">Send anonymous crash reports</string>
    <string name="options_consent_crashes_summary">We hope this does not happen, but if the game will crash, would you like to send an anonymous report so we can fix the problem?</string>
    <string name="options_consent_analytics">Send in-game analytics</string>
    <string name="options_consent_analytics_summary">We will use this anonymous data to improve this and other our games</string>
    <string name="options_consent_ads">Personalize Your Ad Experience</string>
    <string name="options_consent_ads_summary">Fire Strike personalizes your advertising experience using Appodeal.\n\nAppodeal and its partners may collect and process personal data such as device identifiers, location data, and other demographic and interest data to provide advertising experience tailored to you. By consenting to this improved ad experience, you`ll see ads that Appodeal and its partners believe are more relevant to you.\n\nBy agreeing, you confirm that you are over the age of 16 and would like a personalized ad experience. Learn more at <b>https://www.appodeal.com/privacy-policy</b>\n\nIf you disagree, Appodeal won`t collect your data for personalized advertising in this app. However you will still see ads, but they may not be as relevant to your interests.</string>
    <string name="engine_state_cant_save">Can’t save state - probably there is no free space in internal storage</string>
    <string name="engine_state_cant_load">Can’t load state</string>
    <string name="engine_profile_cant_save">Can’t save profile - probably there is no free space in internal storage</string>
    <string name="engine_profile_cant_load">Can’t load profile</string>
    <string name="engine_cheats_disabled">Sorry, but this time without cheats :)</string>
    <string name="engine_dbg_loaded" translatable="false">Loaded</string>
    <string name="engine_dbg_saved" translatable="false">Saved</string>
    <string name="engine_lbl_fps">FPS: %d</string>
    <string name="engine_lbl_cant_open_door">Can’t open this door</string>
    <string name="engine_lbl_need_blue_key">You need a blue key</string>
    <string name="engine_lbl_need_red_key">You need a red key</string>
    <string name="engine_lbl_need_green_key">You need a green key</string>
    <string name="engine_lbl_secret_found">Secret found</string>
    <string name="engine_lbl_endl_kills">Enemies: %d%%</string>
    <string name="engine_lbl_endl_secrets">Secrets: %d%%</string>
    <string name="engine_lbl_endl_time">Time: %s</string>
    <string name="engine_lbl_gameover">Game Over</string>
    <string name="engine_lbl_gameover_restart">Restart level</string>
    <string name="engine_lbl_gameover_continue">Watch AD + Continue</string>
    <string name="engine_lbl_achievement_unlocked">Achievement unlocked: %s</string>
    <string name="engine_lblh_move">Move</string>
    <string name="engine_lblh_rotate">Rotate</string>
    <string name="engine_lblh_fire">Fire</string>
    <string name="engine_lblh_weapons">Change weapon / Menu</string>
    <string name="engine_lblh_quick_weapons">Last weapons / Quick change</string>
    <string name="engine_lblh_minimap">Minimap</string>
    <string name="engine_lblh_stats_health">Your health</string>
    <string name="engine_lblh_stats_ammo">Your ammo</string>
    <string name="engine_lblh_stats_armor">Your armor</string>
    <string name="engine_lblh_stats_keys">Your keys</string>
    <string name="engine_lblh_do_not_rotate">Do not rotate! Just move</string>
    <string name="engine_lblm_welcome_to_training_area">Welcome to the training area!</string>
    <string name="engine_lblm_use_move_pad_to_follow_arrows">Use movement pad to follow the arrows</string>
    <string name="engine_lblm_doing_well">Doing well! Keep going!</string>
    <string name="engine_lblm_slide_to_rotate">Slide finger on the screen to rotate</string>
    <string name="engine_lblm_move_and_rotate_to_follow_arrows">Move and rotate to follow the arrows</string>
    <string name="engine_lblm_use_minimap_to_follow_path">Use the minimap to follow the path</string>
    <string name="engine_lblm_to_open_door_go_through_it">To open the door, just go through it</string>
    <string name="engine_lblm_next_door_is_closed_use_switch">Next door is closed, you should use switch to open it</string>
    <string name="engine_lblm_to_activate_switch_go_up_to_him">To activate the switch, go up to him as close as possible</string>
    <string name="engine_lblm_this_is_window">This is the window. You shouldn’t go through it</string>
    <string name="engine_lblm_to_open_door_pickup_key">To open next door you should pick up the key first</string>
    <string name="engine_lblm_press_end_level">Press the switch and prepare for a battle</string>
    <string name="engine_lblm_use_fire_and_kill_enemy">Use fire button and defuse the next enemy</string>
    <string name="engine_lblm_pickup_medi">If you get hurt in a battle, pick up a first aid kit</string>
    <string name="engine_lblm_open_weapon_menu_and_select_pistol">Open weapon menu and select a pistol</string>
    <string name="engine_lblm_pickup_ammo">Pick up ammo to replenish them</string>
    <string name="engine_lblm_quick_change_weapon">Tap on the weapon icon above to change it</string>
    <string name="engine_lblm_after_quick_change_weapon">This is faster than selecting through the menu</string>
    <string name="engine_lblm_pickup_armor">Pick up the armor</string>
    <string name="engine_lblm_after_pickup_armor">When you wear an armor, you save more health in a battle</string>
    <string name="engine_lblm_3" translatable="false">3</string>
    <string name="engine_lblm_2" translatable="false">2</string>
    <string name="engine_lblm_1" translatable="false">1</string>
    <string name="achievements_item_achieved">★ ACHIEVED ★</string>
    <string name="achievements_exp">EXP: %d</string>
    <string name="achievements_back">← Back</string>
    <string name="achievements_t_monsters_killed_5">Hands in blood</string>
    <string name="achievements_d_monsters_killed_5">Defuse 5 enemies</string>
    <string name="achievements_t_monsters_killed_50">Apprentice butcher</string>
    <string name="achievements_d_monsters_killed_50">Defuse 50 enemies</string>
    <string name="achievements_t_monsters_killed_500">It’s my job</string>
    <string name="achievements_d_monsters_killed_500">Defuse 500 enemies</string>
    <string name="achievements_t_monsters_killed_2500">Ron Jambo</string>
    <string name="achievements_d_monsters_killed_2500">Defuse 2500 enemies</string>
    <string name="achievements_t_monsters_killed_5000">I see dead enemies. A lot</string>
</resources>