<?xml version="1.0" encoding="utf-8"?>
<zame.game.core.widget.AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_common"
    tools:ignore="NestedWeights,Overdraw">

    <zame.game.core.widget.AbsoluteLayout
        android:id="@+id/play_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/plate"
            app:layout_cxWeight="0.5"
            app:layout_heightWeight="0.66"
            app:layout_widthWeight="0.35"
            app:layout_y="0dp"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:contentDescription="@string/menu_btn_play"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_play"
            app:layout_cxWeight="0.49"
            app:layout_cyWeight="0.51"
            app:layout_heightWeight="0.2"
            app:layout_widthWeight="0.2" />

    </zame.game.core.widget.AbsoluteLayout>

    <!-- layout_byWeight = 1 - 0.01 - 0.3 / 2 = 0.84 -->

    <ImageButton
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/menu_btn_options"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_options"
        app:layout_cyWeight="0.84"
        app:layout_heightWeight="0.3"
        app:layout_widthWeight="0.19"
        app:layout_xWeight="0.025" />

    <ImageButton
        android:id="@+id/like_vk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/menu_btn_like_vk"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_like_vk"
        app:layout_cxWeight="0.4"
        app:layout_cyWeight="0.84"
        app:layout_heightWeight="0.2"
        app:layout_widthWeight="0.1" />

    <ImageButton
        android:id="@+id/like_facebook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/menu_btn_like_facebook"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_like_facebook"
        app:layout_cxWeight="0.5"
        app:layout_cyWeight="0.84"
        app:layout_heightWeight="0.2"
        app:layout_widthWeight="0.1" />

    <ImageButton
        android:id="@+id/like_telegram"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/menu_btn_like_telegram"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_like_telegram"
        app:layout_cxWeight="0.6"
        app:layout_cyWeight="0.84"
        app:layout_heightWeight="0.2"
        app:layout_widthWeight="0.1" />

    <!-- layout_rxWeight = 1 - 0.025 = 0.975 -->

    <ImageButton
        android:id="@+id/achievements"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/menu_btn_achievements"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_achievements"
        app:layout_cyWeight="0.84"
        app:layout_heightWeight="0.3"
        app:layout_rxWeight="0.975"
        app:layout_widthWeight="0.19" />

    <include layout="@layout/flavour_menu_gplay" />

    <FrameLayout
        android:id="@+id/banner_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightWeight="0.25"
        app:layout_x="0dp"
        app:layout_y="0dp"
        tools:background="#fd0" />

    <!--
    <include
        layout="@layout/admarker_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightWeight="0.25"
        app:layout_x="0dp"
        app:layout_y="0dp" />
    -->

</zame.game.core.widget.AbsoluteLayout>
